--- a/app/src/main/res/layout/activities_list.xml
+++ b/app/src/main/res/layout/activities_list.xml
@@ -9,22 +9,192 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
-              android:textSize="@dimen/menu_title"
+              android:textSize="30sp"
               android:padding="@dimen/menu_title_padding"
-              android:background="@color/light_gray"
+              android:background="@color/green"
+              android:textColor="@color/white"
               android:fontFamily="sans-serif"
               android:textStyle="bold"
               android:text="@string/activities_list_title_string"/>
-    
-    <ListView android:id="@android:id/list"
-              android:layout_width="match_parent"
-              android:layout_height="0dip"
-              android:layout_weight="1"/>
 
-    <TextView android:id="@android:id/empty"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="@string/activities_list_empty"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="Designer Watch"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="58dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"
+                android:onClick="onArClick"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="Teapot"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_margin="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="Stereo System"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_margin="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="LCD Television"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_margin="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="Coffee Machine"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_margin="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="Leather Couch"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_margin="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/list_element_shape">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:text="Bedside Locker"
+                android:textSize="25dp"
+                android:layout_weight="1"
+                android:layout_margin="25dp"
+                android:layout_gravity="center"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="20dp"
+                android:background="@color/light_green"
+                android:textColor="@color/light_grey"
+                android:text="View in AR"/>
+        </LinearLayout>
+
+    </LinearLayout>
     
 </LinearLayout>
 
