--- a/app/src/main/res/layout/activities_list_text_view.xml
+++ b/app/src/main/res/layout/activities_list_text_view.xml
@@ -8,5 +8,5 @@
     android:gravity="center_vertical"
     android:paddingLeft="@dimen/menu_activities_list_padding_left"
     android:paddingTop="@dimen/menu_activities_list_padding_top_down"
-    android:paddingBottom="@dimen/menu_activities_list_padding_top_down"
-/>
+    android:paddingBottom="@dimen/menu_activities_list_padding_top_down">
+</TextView>
