--- a/app/src/main/res/layout/info_popup.xml
+++ b/app/src/main/res/layout/info_popup.xml
@@ -46,7 +46,8 @@
             android:layout_height="250dp"
             android:layout_below="@+id/divider"
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="25dp">
 
             <TextView
                 android:id="@+id/product_description"
@@ -56,7 +57,6 @@
                 android:textSize="15dp"
                 android:textColor="@android:color/darker_gray"/>
         </ScrollView>
-
 
         <Button
             android:layout_width="wrap_content"
